--- a/src/half-screens/homeScreenBody.css
+++ b/src/half-screens/homeScreenBody.css
@@ -1,3 +1,12 @@
+.about-image{
+ margin: 80px 0;
+ width: 100%;
+}
+
+.home-page-body{
+ padding: 0 100px;
+}
+
 .main-body-image {
  width: 100%;
 }
